--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   dio: ^3.0.9
+  provider: ^4.0.4
+  event_bus: ^1.1.1
+  device_info: ^0.4.2+1
 
 
 dev_dependencies:
