--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
     - assets/images/
     - assets/images/tabbar/
     - assets/images/home/
+    - assets/json/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
